# SuiteSparse_cmake

./: .gitignore  CMakeLists.txt
AMD/: CMakeLists.txt
CAMD/: CMakeLists.txt
CCOLAMD/: CMakeLists.txt
CHOLMOD/: CMakeLists.txt
CHOLMOD/Include/: cholmod_core.h  cholmod_gpu.h
CHOLMOD/Supernodal/: cholmod_super_numeric.c  cholmod_super_symbolic.c  t_cholmod_super_numeric.c
COLAMD/: CMakeLists.txt
SuiteSparse_config/: CMakeLists.txt
cmake/: SuiteSparseDetectCUDA.cmake  SuiteSparseDetectCXXCompiler.cmake  SuiteSparseUtils.cmake
metis-5.1.0/: CMakeLists.txt
